--- a/common/src/main/resources/assets/yaam/lang/en_us.json
+++ b/common/src/main/resources/assets/yaam/lang/en_us.json
@@ -1,4 +1,5 @@
 {
   "category.yaam_tab": "Yet Another Additions Mod",
-  "block.yaam.drying_rack": "Drying Rack"
+  "block.yaam.drying_rack": "Drying Rack",
+  "emi.category.yaam.drying_workstation": "Drying"
 }
